crates/jarl-core/src/lints/testthat/expect_named/snapshots/jarl_core__lints__testthat__expect_named__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/testthat/expect_named/mod.rs
expression: "get_fixed_text(vec![\"expect_equal(names(x), 'a')\",\n\"testthat::expect_equal(names(x), 'a')\",\n\"expect_equal(names(x), c('a', 'b'))\", \"expect_identical(names(x), 'a')\",],\n\"expect_named\", None,)"
---
OLD:
====
expect_equal(names(x), 'a')
NEW:
====
expect_named(x, 'a')

OLD:
====
testthat::expect_equal(names(x), 'a')
NEW:
====
testthat::expect_named(x, 'a')

OLD:
====
expect_equal(names(x), c('a', 'b'))
NEW:
====
expect_named(x, c('a', 'b'))

OLD:
====
expect_identical(names(x), 'a')
NEW:
====
expect_named(x, 'a')
